syntax = "proto3";

package content_management;

service Course {
    rpc NewCourse(NewCourseRequest) returns (NewCourseResponse);
}

message NewCourseRequest {
    string title = 1;
    string description = 2;
}

message NewCourseResponse {

}
